--- a/FKR32_assistant/MainWindow.xaml
+++ b/FKR32_assistant/MainWindow.xaml
@@ -5,8 +5,57 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:FKR32_assistant"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
-    </Grid>
+        WindowStartupLocation="CenterScreen" ResizeMode="NoResize" 
+        WindowStyle="None" Height="600" Width="920"
+        Background="Transparent" AllowsTransparency="True">
+
+    <Border Background="#015666">
+        <Grid>
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="200"/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
+
+            <Grid.RowDefinitions>
+                <RowDefinition Height="20"/>
+                <RowDefinition Height="30"/>
+                <RowDefinition/>
+            </Grid.RowDefinitions>
+
+            <TextBlock Text="FKR 32" VerticalAlignment="Center"
+                       HorizontalAlignment="Left" Foreground="White"
+                       FontSize="40" Grid.Column="0" Grid.Row="0" Grid.RowSpan="2"
+                       Margin="10,-10,0,0" Height="50" Width="150"/>
+           
+            <StackPanel Grid.Row="2">
+                
+                <RadioButton Content="Главная" Height="50" Foreground="White"
+                             FontSize="20" Style="{StaticResource MenuButtonTheme}"/>
+                
+                <RadioButton Content="Не главная" Height="50" Foreground="White"
+                             FontSize="20" Style="{StaticResource MenuButtonTheme}"/>
+                
+                <RadioButton Content="Второстепенная" Height="50" Foreground="White"
+                             FontSize="20" Style="{StaticResource MenuButtonTheme}"/>
+                
+                <RadioButton Content="Третьестепенная" Height="50" Foreground="White"
+                             FontSize="20" Style="{StaticResource MenuButtonTheme}"/>
+                
+                <RadioButton Content="Никакая" Height="50" Foreground="White"
+                             FontSize="20" Style="{StaticResource MenuButtonTheme}"/>
+
+            </StackPanel>
+
+            <TextBlock Grid.Column="1" Text="Заголовок" HorizontalAlignment="Center" Margin="0,0,0,0">
+
+            </TextBlock>
+
+            <Button Grid.Column="1" >
+                
+            </Button>
+
+        </Grid>
+    </Border>
+
+
 </Window>
